@@ -115,10 +115,6 @@ foreach my $test (
   $bundle = init_bundle({'-remove' => [qw(Test::Compile ExtraTests)]});
   &$has_not('Test::Compile');
   &$has_not('ExtraTests');
-
-  $bundle = init_bundle({disable_tests => 'EOLTests,Test::Compile'});
-  &$has_not('EOLTests');
-  &$has_not('Test::Compile');
   &$has_ok('NoTabsTests');
 
   $bundle = init_bundle({});
